# pipixia-assistant

./: .gitignore  LICENSE  README.md  start.ps1  stop.ps1
backend/: .env.example  .gitignore  Cargo.toml  MEMORY_FEATURE.md  README.md  TEST.md  TEST_RESULTS.md
backend/agents/: code-agent.yml  drawio-agent.yml  general-agent.yml
backend/src/: agent.rs  api_key.rs  config.rs  main.rs  memory.rs  tools.rs  workflow.rs
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.vue
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: main.rs
