[package]
name = "rig-agent-scaffold"
version = "0.1.0"
edition = "2021"
authors = ["Xie Wenchang <xiemulei@example.com>"]
description = "AI Agent Scaffold based on Rust + Rig framework"
license = "MIT"

[dependencies]
# Rig core - AI Agent framework
rig-core = "0.32.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Environment variables
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
once_cell = "1.19"

# Configuration
config = "0.14"

# Database - SQLite for memory persistence
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono"] }

# Vector Database - Qdrant for semantic search
qdrant-client = "1.14"

# For blocking on async in fallback
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "rig-agent-scaffold"
path = "src/main.rs"
