[package]
name = "rig-agent-scaffold"
version = "0.1.0"
edition = "2021"
description = "AI Agent Scaffold based on Rust + Rig framework"
license = "MIT"

[dependencies]
# Rig core - AI Agent framework
rig-core = "0.33"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# HTTP client
reqwest = { version = "0.13", features = ["json", "rustls"] }

# Environment variables
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
once_cell = "1.21"

# Configuration
config = "0.15"

# Vector Database - Qdrant for semantic search
qdrant-client = "1.17"

# For blocking on async in fallback
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "rig-agent-scaffold"
path = "src/main.rs"
